webpage-style.css
body {
    background-image: url("img/background-xl-2.png");
    background-position: right;
    background-repeat: no-repeat;
    background-size: auto 1000px;
    background-attachment: fixed;
    margin: 0;
    padding: 0;

}

html {
    width: 100vw;
    height: 100vh;
    margin: 0 !important;
    padding: 0 !important;
}

#main-container {
    width: 100vw;
    height: 100vh;
}

/*Small Nav Bar*/

#navbar-small {
    background-image: url("img/wood-small-nav.png");
    background-size: cover;
    color: white;
    width: 100vw;
    height: 50px;
    margin-bottom: 10px;
    border: 1px solid #7f7a6f;
    display: block;
    position: fixed;
    top: 0;
    left: 0;
}

.nav-li-small > a {
    color: #fffee8 !important;
    text-decoration: none;
    font-family: 'Lobster', cursive;
    font-size: 1.75em;
}
#small-icon-mobile {
    width: 27%;
    height: auto;
    background-color: #fffee8;
    border-radius: 50%;
}

#icon-li-mobile {
   width: 150px;
}

#about-me-anchor, #connect-anchor, #project-anchor{
    display: block;
    position: relative;
    top: -47px;
    visibility: hidden;
}


/*Page Content Small*/

#icon {
    width: 100px;
    height: auto;
    background-color: #fffee8;
    border-radius: 50%;
}

#about-me {
    margin-top: 50px;
}


#about-me, #connect {
    display: inline-block;
    border: 1px solid #8c8a7b;
    background-color: rgba(224, 200, 173, .3);
    width: 100vw;
    padding: 10px;
    margin-bottom: 10px;
    /*height: 25vw;*/

}

#main-project {
    display: inline-block;
    border: 1px solid #8c8a7b;
    background-color: rgba(224, 200, 173, .3);
    width: 100vw;
    padding: 10px;
    margin-bottom: 10px;
}

.outside-link > a {
    color: #0092b0;
}

.outside-link > a:visited{
    color: #8e3499;
}

.outside-link > a:hover {
    color: #ff9300;
}

.outside-link > a:active {
    color: #fe7920;
}

#weather-project, #coffee-project {

    display: inline-block;
    border: 1px solid #8c8a7b;
    background-color: #fffee8;
    width: 100%;
    /*height: 25vw;*/
    padding: 10px;
    margin-bottom: 10px;

}

#weather-img, #coffee-img {
    width: 100%;
    height: auto;
}


/*Large Nav Bar*/

/*#sidebar {*/
/*    width: 15vw;*/
/*    height: 100vh;*/
/*    background-size: cover;*/
/*    background-repeat: no-repeat;*/
/*    background-image: url("img/wood-slim.png");*/
/*    display: inline-block;*/
/*}*/

/*#navbar-section {*/
/*    background-color: rgba(224, 200, 173, .5);*/
/*    color: white;*/
/*    !*width: 100vw;*!*/
/*    !*height: 50px;*!*/
/*    !*border: 3px solid #7f7a6f;*!*/
/*    display: block;*/
/*    position: fixed;*/
/*    left: 25px;*/
/*    border-radius: 10px;*/
/*    height: 90vh;*/
/*    width: 10vw;*/
/*    margin-top: 10px;*/
/*}*/

/*.nav-li > a {*/
/*    color: black !important;*/
/*    text-decoration: none;*/
/*    font-family: 'Lobster', cursive;*/
/*    font-size: 1.75em;*/
/*}*/

/*.nav-li > a {*/
/*    color: white !important;*/
/*    text-decoration: none;*/
/*    font-family: 'Lobster', cursive;*/
/*    font-size: 1.75em;*/
/*}*/

/*#icon-li {*/
/*    width: 150px;*/
/*}*/

